# textractor

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
.github/workflows/: CI.yml  pypi.yml
src/: extraction.rs  main.rs  models.rs  routes.rs
textractor-cli/: Cargo.toml
textractor-cli/src/: main.rs
textractor-core/: Cargo.toml  fly.toml
textractor-core/src/: detection.rs  extraction.rs  lib.rs
textractor-core/tests/data/: felty.txt  webpage.html
textractor-py/: Cargo.toml  Makefile  pyproject.toml
textractor-py/examples/: get_text_from_file.py
textractor-py/src/: extraction.rs  lib.rs
textractor-wasm/: Cargo.toml  LICENSE_MIT  Makefile  README.md  build.rs
textractor-wasm/examples/: basic.ts
textractor-wasm/src/: lib.rs
textractor-wasm/tests/: web.rs
textractor-web/: Cargo.toml  README.md
textractor-web/assets/: form.html
textractor-web/src/: docs.rs  errors.rs  extraction.rs  main.rs  models.rs  routes.rs
