[package]
name = "textractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
pdf-extract = "0.7.5"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"