[package]
name = "textractor"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
docx-rs = "0.4.15"
infer = "0.15.0"
pdf-extract = "0.7.5"
scraper = "0.19.0"
xml = "0.8.20"
zip = { version = "*", default-features = false, features = ["deflate", "aes-crypto", "time"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.22.0"
