[package]
name = "textractor-py"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "textractors"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.82"
pyo3 = { version = "0.20.0", features = ["anyhow"] }
textractor = { path = "../textractor-core"}
