[package]
name = "textractor-web"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "textractor"
path = "src/main.rs"

[dependencies]
textractor = { path = "../textractor-core" }
axum = { version = "0.7.5", features = ["multipart"] }
serde = { version = "1.0.197", features = ["derive"] }
tokio = { features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.82"
