[package]
name = "textractor-web"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "textractor"
path = "src/main.rs"

[dependencies]
textractor = { path = "../textractor-core" }
axum = { version = "0.7.5", features = ["multipart", "tracing"] }
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features=["env-filter"] }
tower-http = { version = "0.5.0", features = ["trace"] }
anyhow = "1.0.82"
utoipa = "4"
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
tokio = { version="1.40.0", features = ["full"] }

